# ContextRag

./: .env.example  .gitignore  Dockerfile  PROJECT_PLAN.md  README.md  debug_log.txt  debug_output.txt  pyproject.toml  requirements.txt
.github/workflows/: huggingface_sync.yml
app/: main.py
app/api/: auth.py  chat.py  health.py  upload.py
app/core/: config.py  dependencies.py
app/models/: schemas.py
app/services/: auth.py  chunker.py  embedder.py  llm_chain.py  optimizer.py  pdf_parser.py  reranker.py  retriever.py  vector_store.py
chatbot/: app.py
docker/: Dockerfile  Dockerfile.chatbot  docker-compose.yml
frontend/: app.js  change.html  index.html  roadmap.html  style.css
scripts/: debug_500.py  debug_chat.py  debug_hf.py  debug_hf_urls.py  debug_models.py  debug_models_hf.py  debug_test.py  debug_upload.py  ingest_pdfs.py
tests/: baseline_comparison.py  comprehensive_eval.py  detailed_scores.py  eval_queries.json  eval_queries_150.json  eval_queries_expanded.json  eval_results.json  evaluate_quality.py  test_optimizer.py  test_pipeline.py  weight_ablation.py
tests/ablation_results/: baseline_comparison.csv  baseline_comparison.json  baseline_comparison_table.tex  paper_sections.tex  weight_ablation.csv  weight_ablation.json  weight_ablation_table.tex
