[project]
name = "context-aware-rag"
version = "0.1.0"
description = "Context-Aware RAG Engine — semantic search & QA over PDF collections"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
